bootstrap/kubernetes/apps/media/radarr/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: radarr
  name: radarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      run: radarr
  template:
    metadata:
      labels:
        run: radarr
      annotations: {}
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - env:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
            - name: TZ
              value: "America/Argentina/Cordoba"
          image: lscr.io/linuxserver/radarr:version-6.1.1.10360
          name: radarr
          resources:
            requests:
              cpu: 35m
              memory: 300Mi
            limits:
              cpu: 150m
              memory: 340Mi
          ports:
            - containerPort: 7878
              name: webui
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /media
            - name: downloads
              mountPath: /downloads
            - name: downloads-usenet
              mountPath: /downloads-usenet
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media
          persistentVolumeClaim:
            claimName: jellyfin-media
        - name: downloads
          persistentVolumeClaim:
            claimName: trans-movies-down
        - name: downloads-usenet
          persistentVolumeClaim:
            claimName: sabnzbd-down
