bootstrap/kubernetes/apps/media/radarr/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: LoadBalancer
  ports:
    - port: 7878
      protocol: TCP
      targetPort: 7878
      name: webui
  selector:
    run: radarr
  loadBalancerIP: 10.42.20.63
